build_log_v4.txt
install
+- install nyon_editor
   +- compile exe nyon_editor Debug native 1 errors
src\rendering.zig:319:12: error: duplicate struct member name 'createCustomMaterial'
    pub fn createCustomMaterial(self: *RenderingSystem, shader_name: []const u8) !usize {
           ^~~~~~~~~~~~~~~~~~~~
src\rendering.zig:356:12: note: duplicate name here
    pub fn createCustomMaterial(self: *RenderingSystem, shader_name: []const u8) !usize {
           ^~~~~~~~~~~~~~~~~~~~
src\rendering.zig:271:29: note: struct declared here
pub const RenderingSystem = struct {
                            ^~~~~~
error: 1 compilation errors
failed command: "C:\\Users\\donald\\scoop\\persist\\zvm\\data\\master\\zig.exe" build-exe ".zig-cache\\o\\bef9cd2713567a561aecbc654f5ba056\\raylib.lib" ".zig-cache\\o\\0e7c2f127e549b59bb98dcfdf8e3793c\\glfw.lib" -ODebug -I ".zig-cache\\o\\0d22c593831c6ee0b3841a8e37487498" -I ".zig-cache\\o\\703585cd732f4d6189e8641ca771d85a" --dep raylib --dep zglfw --dep nyon_game "-Mroot=C:\\Users\\donald\\nyon-game\\src\\editor.zig" ".zig-cache\\o\\bef9cd2713567a561aecbc654f5ba056\\raylib.lib" -ODebug -I ".zig-cache\\o\\0d22c593831c6ee0b3841a8e37487498" "-Mraylib=C:\\Users\\donald\\AppData\\Local\\zig\\p\\raylib_zig-5.6.0-dev-KE8REL5MBQAf3p497t52Xw9P7ojndIkVOWPXnLiLLw2P\\lib\\raylib.zig" -I "C:\\Users\\donald\\AppData\\Local\\zig\\p\\zglfw-0.10.0-dev-zgVDNHO2IQDy_fSdwY5U4z42rHUuKgt7T9f-qmQ3FnuL\\libs\\glfw\\include" --dep zglfw_options "-Mzglfw=C:\\Users\\donald\\AppData\\Local\\zig\\p\\zglfw-0.10.0-dev-zgVDNHO2IQDy_fSdwY5U4z42rHUuKgt7T9f-qmQ3FnuL\\src\\zglfw.zig" ".zig-cache\\o\\bef9cd2713567a561aecbc654f5ba056\\raylib.lib" ".zig-cache\\o\\0e7c2f127e549b59bb98dcfdf8e3793c\\glfw.lib" -ODebug -I ".zig-cache\\o\\0d22c593831c6ee0b3841a8e37487498" -I ".zig-cache\\o\\703585cd732f4d6189e8641ca771d85a" --dep raylib --dep zglfw --dep nyon_game "-Mnyon_game=C:\\Users\\donald\\nyon-game\\src\\root.zig" "-Mzglfw_options=.zig-cache\\c\\9873cc93e86e13699c9933d569c37336\\options.zig" -lwinmm -lgdi32 -lopengl32 -luser32 -lshell32 -lc --cache-dir .zig-cache --global-cache-dir "C:\\Users\\donald\\AppData\\Local\\zig" --name nyon_editor --zig-lib-dir "C:\\Users\\donald\\scoop\\persist\\zvm\\data\\master\\lib\\" --listen=-

install
+- install nyon_game
   +- compile exe nyon_game Debug native 1 errors
src\rendering.zig:319:12: error: duplicate struct member name 'createCustomMaterial'
    pub fn createCustomMaterial(self: *RenderingSystem, shader_name: []const u8) !usize {
           ^~~~~~~~~~~~~~~~~~~~
src\rendering.zig:356:12: note: duplicate name here
    pub fn createCustomMaterial(self: *RenderingSystem, shader_name: []const u8) !usize {
           ^~~~~~~~~~~~~~~~~~~~
src\rendering.zig:271:29: note: struct declared here
pub const RenderingSystem = struct {
                            ^~~~~~
error: 1 compilation errors
failed command: "C:\\Users\\donald\\scoop\\persist\\zvm\\data\\master\\zig.exe" build-exe ".zig-cache\\o\\bef9cd2713567a561aecbc654f5ba056\\raylib.lib" ".zig-cache\\o\\0e7c2f127e549b59bb98dcfdf8e3793c\\glfw.lib" ".zig-cache\\o\\bef9cd2713567a561aecbc654f5ba056\\raylib.lib" ".zig-cache\\o\\0e7c2f127e549b59bb98dcfdf8e3793c\\glfw.lib" -ODebug -I ".zig-cache\\o\\0d22c593831c6ee0b3841a8e37487498" -I ".zig-cache\\o\\703585cd732f4d6189e8641ca771d85a" -I ".zig-cache\\o\\0d22c593831c6ee0b3841a8e37487498" -I ".zig-cache\\o\\703585cd732f4d6189e8641ca771d85a" --dep raylib --dep zglfw --dep nyon_game "-Mroot=C:\\Users\\donald\\nyon-game\\src\\main.zig" ".zig-cache\\o\\bef9cd2713567a561aecbc654f5ba056\\raylib.lib" -ODebug -I ".zig-cache\\o\\0d22c593831c6ee0b3841a8e37487498" "-Mraylib=C:\\Users\\donald\\AppData\\Local\\zig\\p\\raylib_zig-5.6.0-dev-KE8REL5MBQAf3p497t52Xw9P7ojndIkVOWPXnLiLLw2P\\lib\\raylib.zig" -I "C:\\Users\\donald\\AppData\\Local\\zig\\p\\zglfw-0.10.0-dev-zgVDNHO2IQDy_fSdwY5U4z42rHUuKgt7T9f-qmQ3FnuL\\libs\\glfw\\include" --dep zglfw_options "-Mzglfw=C:\\Users\\donald\\AppData\\Local\\zig\\p\\zglfw-0.10.0-dev-zgVDNHO2IQDy_fSdwY5U4z42rHUuKgt7T9f-qmQ3FnuL\\src\\zglfw.zig" ".zig-cache\\o\\bef9cd2713567a561aecbc654f5ba056\\raylib.lib" ".zig-cache\\o\\0e7c2f127e549b59bb98dcfdf8e3793c\\glfw.lib" -ODebug -I ".zig-cache\\o\\0d22c593831c6ee0b3841a8e37487498" -I ".zig-cache\\o\\703585cd732f4d6189e8641ca771d85a" --dep raylib --dep zglfw --dep nyon_game "-Mnyon_game=C:\\Users\\donald\\nyon-game\\src\\root.zig" "-Mzglfw_options=.zig-cache\\c\\9873cc93e86e13699c9933d569c37336\\options.zig" -lwinmm -lgdi32 -lopengl32 -luser32 -lshell32 -lc --cache-dir .zig-cache --global-cache-dir "C:\\Users\\donald\\AppData\\Local\\zig" --name nyon_game --zig-lib-dir "C:\\Users\\donald\\scoop\\persist\\zvm\\data\\master\\lib\\" --listen=-

Build Summary: 6/11 steps succeeded (2 failed)
install transitive failure
+- install nyon_game transitive failure
|  +- compile exe nyon_game Debug native 1 errors
+- install nyon_editor transitive failure
   +- compile exe nyon_editor Debug native 1 errors

error: the following build command failed with exit code 1:
.zig-cache\o\6f5f38c43c49b04d48e9dc7c1bc958d4\build.exe C:\Users\donald\scoop\persist\zvm\data\master\zig.exe C:\Users\donald\scoop\persist\zvm\data\master\lib C:\Users\donald\nyon-game .zig-cache C:\Users\donald\AppData\Local\zig --seed 0x5f5419e2 -Ze4f5cac04928d01d
